clusters/app.ci/release-controller/deploy-ocp-controller-s390x.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: release-controller-ocp-s390x
  namespace: ci
spec:
  host: openshift-release-s390x.apps.ci.l2s4.p1.openshiftapps.com
  tls:
    termination: Edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: release-controller-ocp-s390x
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: release-controller-ocp-s390x
  namespace: ci
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"release-controller:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"controller\")].image"}]'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-controller-ocp-s390x
  template:
    metadata:
      labels:
        app: release-controller-ocp-s390x
    spec:
      serviceAccountName: release-controller
      volumes:
      - configMap:
          defaultMode: 420
          name: config
        name: config
      - configMap:
          defaultMode: 420
          name: job-config-misc
        name: job-config-misc
      - configMap:
          defaultMode: 420
          name: job-config-master
        name: job-config-master
      - configMap:
          defaultMode: 420
          name: job-config-3.x
        name: job-config-3x
      - configMap:
          defaultMode: 420
          name: job-config-4.1
        name: job-config-41
      - configMap:
          defaultMode: 420
          name: job-config-4.2
        name: job-config-42
      - configMap:
          defaultMode: 420
          name: job-config-4.3
        name: job-config-43
      - configMap:
          defaultMode: 420
          name: job-config-4.4
        name: job-config-44
      - configMap:
          defaultMode: 420
          name: job-config-4.5
        name: job-config-45
      - name: job-config-46
        configMap:
          name: job-config-4.6
      - name: job-config-47
        configMap:
          name: job-config-4.7
      - name: release-controller-kubeconfigs
        secret:
          secretName: release-controller-kubeconfigs
          items:
          - key: sa.release-controller-ocp-s390x.api.ci.config
            path: kubeconfig
      - name: oauth
        secret:
          secretName: github-credentials-openshift-ci-robot
      - name: bugzilla
        secret:
          secretName: bugzilla-credentials-openshift-bugzilla-robot
      - name: plugins
        configMap:
          name: plugins
      containers:
      - name: controller
        image: release-controller:latest
        volumeMounts:
        - mountPath: /etc/config
          name: config
          readOnly: true
        - mountPath: /etc/job-config/misc
          name: job-config-misc
          readOnly: true
        - mountPath: /etc/job-config/master
          name: job-config-master
          readOnly: true
        - mountPath: /etc/job-config/3.x
          name: job-config-3x
          readOnly: true
        - mountPath: /etc/job-config/4.1
          name: job-config-41
          readOnly: true
        - mountPath: /etc/job-config/4.2
          name: job-config-42
          readOnly: true
        - mountPath: /etc/job-config/4.3
          name: job-config-43
          readOnly: true
        - name: job-config-44
          mountPath: /etc/job-config/4.4
          readOnly: true
        - name: job-config-45
          mountPath: /etc/job-config/4.5
          readOnly: true
        - name: job-config-46
          mountPath: /etc/job-config/4.6
          readOnly: true
        - name: job-config-47
          mountPath: /etc/job-config/4.7
          readOnly: true
        - name: release-controller-kubeconfigs
          mountPath: /etc/kubeconfig
          readOnly: true
        - name: oauth
          mountPath: /etc/github
          readOnly: true
        - name: bugzilla
          mountPath: /etc/bugzilla
          readOnly: true
        - name: plugins
          mountPath: /etc/plugins
          readOnly: true
        command:
        - /usr/bin/release-controller
        - --to=release
        - --release-namespace=ocp-s390x
        - --prow-config=/etc/config/config.yaml
        - --job-config=/etc/job-config
        - --prow-job-kubeconfig=/etc/prowjob-kubeconfig/kubeconfig
        - --artifacts=openshift-release-artifacts-s390x.svc.ci.openshift.org
        - --prow-namespace=ci
        - --job-namespace=ci-release-s390x
        - --tools-image-stream-tag=release-controller-bootstrap:tests
        - -v=4
        - --github-token-path=/etc/github/oauth
        - --github-endpoint=http://ghproxy
        - --github-graphql-endpoint=http://ghproxy/graphql
        - --bugzilla-endpoint=https://bugzilla.redhat.com
        - --bugzilla-api-key-path=/etc/bugzilla/api
        - --plugin-config=/etc/plugins/plugins.yaml
        - --verify-bugzilla
